added animsition js files

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                       <div class="list-group">
                         <a href="http://www.sitepoint.com/jquery-popular-plugins-list/" target="_blank" class="list-group-item">SitePoint JQuery Plugin List - list of plugins used by jquery</a>
                         <a href="http://www.unheap.com/" target="_blank" class="list-group-item">UnHeap - list of plugins used by jquery</a>
+                        <a href="http://git.blivesta.com/animsition/" target="_blank" class="list-group-item">Animsition - CSS animation page transisions</a>
                       </div>
 
 
