added stickyjs plugin and blog template page

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <button type="button" class="btn btn-primary"><a href="index.html" class="animsition-link sport-link">Home</a></button>          
                 <button type="button" class="btn btn-primary"><a href="jumbotron.html" class="animsition-link sport-link">Jumbotron Template</a></button>              
                 <button type="button" class="btn btn-primary"><a href="narrow-jumbotron.html" class="animsition-link sport-link">Narrow Jumbotron Template</a></button>
+                <button type="button" class="btn btn-primary"><a href="blog.html" class="animsition-link sport-link">Blog w Static Nav</a></button>
                    
     			</div>		
 				
