added new message on stick to nav bar

--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,7 @@
           <a class="blog-nav-item" href="#">Press</a>
           <a class="blog-nav-item" href="#">New hires</a>
           <a class="blog-nav-item" href="#">About</a>
+          <span class="description"></span>
         </nav>
       </div>
     </div>
