added second nav on stick. animate blog heading

--- a/blog.html
+++ b/blog.html
@@ -32,17 +32,20 @@
           <a class="blog-nav-item" href="#">Press</a>
           <a class="blog-nav-item" href="#">New hires</a>
           <a class="blog-nav-item" href="#">About</a>
-          <span class="description"></span>
+          <span class="description"></span>          
         </nav>
+
       </div>
     </div>
 
     <div class="container">
-
-      <div class="blog-header">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
-        <p class="lead blog-description">The official example template of creating a blog with Bootstrap.</p>
+      <div class="animsition">
+        <div class="blog-header">
+          <h1 class="blog-title">The Bootstrap Blog</h1>
+          <p class="lead blog-description">The official example template of creating a blog with Bootstrap.</p>
+        </div>
       </div>
+      
 
       <div class="row">
 
